fix bug close img in dark mode

--- a/docs/docusaurus/src/components/WasThisHelpful/styles.module.scss
+++ b/docs/docusaurus/src/components/WasThisHelpful/styles.module.scss
@@ -247,4 +247,8 @@
     .modalTextLabel {
         color: var(--ifm-font-color-base);
     }
+
+    .modal .modalHeader img {
+        background-color: transparent;
+    }
 }
